<resources>
    <string name="app_name">smARTIK</string>
    <string name="login_message">Please login to ARTIK Cloud</string>
    <string name="login_action">login</string>

    <string name="action_state">State</string>
    <string name="action_color">Color</string>
    <string name="action_intensity">Intensity</string>
    <string name="button_send">Send</string>
    <string name="initialValue">0</string>
    <string name="light_off">Light Off</string>
    <string name="light_on">Light On</string>

    <string name="title_activity_main">MainActivity</string>


    <string name="log_out">LogOut</string>

    <string name="celsius_label">°C"</string>
    <string name="fahrenheit_label">°F"</string>

    <string name="system_state_label">System</string>
    <string name="temperature_label">Temperature</string>

    <string-array name="state_array">
        <item>Off</item>
        <item>Auto</item>
        <item>Heat</item>
        <item>Cool</item>
    </string-array>

    <string name="status_label">Status</string>
    <string name="rooms_label">Rooms</string>
    <string name="scenarios_label">Scenarios</string>
    <string name="devices_label">Devices</string>

    <string name="device_name_label">Device Name</string>

    <string-array name="device_types">
        <item>Light Bulb</item>
        <item>Thermostat</item>
    </string-array>

    <string name="floor_number">Floor %d</string>
    <string name="add_room">Add</string>
    <string name="room_name_label">Room Name</string>

    <string-array name="floor_numbers_labels">
        <item>Floor 1</item>
        <item>Floor 2</item>
        <item>Floor 3</item>
        <item>Floor 4</item>
        <item>Floor 5</item>
        <item>Floor 6</item>
        <item>Floor 7</item>
        <item>Floor 8</item>
        <item>Floor 9</item>
        <item>Floor 10</item>
    </string-array>

    <string name="room_name_must_be_unique">There is already a room with this name.</string>
    <string name="delete_room_title">Delete Room</string>
    <string name="delete_room_message">Are you sure you want to delete this room?</string>
    <string name="cannot_delete_room_with_devices">You can not remove this room because there are devices linked to it.</string>

</resources>
