<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.socioty.smartik.LedSmartLightActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="180dp"
                        android:background="@mipmap/background">

            <ImageButton
                android:id="@+id/switcher"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:src="@mipmap/off_button"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp" />
            <TextView
                android:id="@+id/lightIndicatorText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_off"
                android:textColor="@android:color/background_light"
                android:layout_below="@id/switcher"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="353dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp" android:layout_marginRight="20dp"
            android:layout_marginTop="10dp" android:gravity="center_horizontal"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Current Color:" android:textColor="@color/progress_gray_dark"
                android:textSize="16sp"/>
            <View
                android:id="@+id/ledColorView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="20dp"
                android:background="@android:color/holo_orange_light"
            />
        </LinearLayout>


        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="192dp">

        <com.triggertrap.seekarc.SeekArc
            android:id="@+id/ledIntensitySeekArc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            seekarc:rotation="0"
            seekarc:startAngle="0"
            seekarc:sweepAngle="360"
            seekarc:arcColor="@color/progress_gray"
            seekarc:arcWidth="3dp"
            android:padding="40dp" android:fadingEdge="none"
            android:fadingEdgeLength="5dp" seekarc:touchInside="true"
            android:scrollbarThumbHorizontal="@android:drawable/btn_radio"
            android:layout_alignParentBottom="true"/>


            <TextView
                android:id="@+id/seekArcProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/initialValue"
                android:typeface="monospace"
                android:textSize="40sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/seekArcProgress"
                android:text="@string/action_intensity" />
            </RelativeLayout>
    </LinearLayout>



</RelativeLayout>
